--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
  <div class="row">
    <div class="col-md-3 col-sm-3 col-xs-6" onclick="uwebsite()"> <a href="#" class="btn btn-sm animated-button victoria-one">Desbloquear todo</a> </div> 
-   <div class="col-md-3 col-sm-3 col-xs-6" onclick="discordUB()" > <a href="#" class="btn btn-sm animated-button victoria-two">Discord UBa</a> </div>
+   <div class="col-md-3 col-sm-3 col-xs-6" onclick="asd()" > <a href="#" class="btn btn-sm animated-button victoria-two">Discord UBa</a> </div>
 </div>
   
  <div class="row">
